# bilibilias

./: .editorconfig  .gitignore  .gitmodules  LICENSE.md  README-en_US.md  README-zh_Hant.md  README-zh_TW.md  README.md  all_modules  build.gradle  build.gradle.kts  compose_compiler_config.conf  config.gradle  generateModuleGraphs.sh  gradle.properties  settings.gradle  settings.gradle.kts
.github/: ci-gradle.properties  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  功能请求.yml  功能需求.md  错误报告.md  错误报告.yml  问题咨询.yml
.github/workflows/: Build.yaml  Build.yaml.yml  Build.yml  Release.yml  android-debug.yml  android.yml  bilibilias.jks  build-apk-alpha.yml  build.yml  ci-gradle.properties  detekt.yml  src.main.kts
.run/: Generate Demo Baseline Profile.run.xml
BILIBILIAS/: build.gradle  settings.gradle
BILIBILIAS/app/: build.gradle  proguard-class.txt  proguard-package.txt  proguard-rules.pro
Lottie/: live_love.json
app/: .gitignore  build.gradle  build.gradle.kts  google-services.json  lint-baseline.xml  proguard-baidu-mtj.pro  proguard-package.txt  proguard-rules.pro
app/dependencies/: prodReleaseRuntimeClasspath.txt  releaseRuntimeClasspath.txt
app/release/: app-release.apk  app-release.apk.REMOVED.git-id  output-metadata.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: renderer.hpp
app/src/main/cpp/src/: renderer.cpp  renderer_jni.cpp
benchmarks/: build.gradle.kts
build-logic/: .gitignore  settings.gradle.kts
build-logic/convention/: build.gradle.kts
common/: build.gradle  build.gradle.kts  proguard-rules.pro
common/config/: detekt.html  detekt.md  detekt.xml
composeApp/: build.gradle.kts
config/: baseline.xml  detekt.html  detekt.md  detekt.xml  detekt.yml
config/detekt/: detekt.yml
config/reports/: detekt.html  detekt.md  merge.sarif
core/analytics/: build.gradle.kts  proguard-rules.pro
core/common/: build.gradle.kts
core/crash/: README.md  build.gradle.kts
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/datasource/: build.gradle.kts
core/datastore/: build.gradle.kts
core/datastore-proto/: build.gradle.kts
core/design-system/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/domain/: build.gradle.kts
core/download/: README.md  build.gradle.kts
core/ffmpeg/: .gitignore  README.md  build.gradle.kts
core/ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg.cpp  ffmpeg_utils.cpp
core/ffmpeg/src/main/cpp/ffmpeg/arm64-v8a/lib/: libavcodec.so.REMOVED.git-id
core/ffmpeg/src/main/cpp/ffmpeg/armeabi-v7a/lib/: libavcodec.so.REMOVED.git-id
core/ffmpeg/src/main/cpp/ffmpeg/include/: config.h
core/ffmpeg/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
core/ffmpeg/src/main/cpp/ffmpeg/x86_64/lib/: libavcodec.so.REMOVED.git-id
core/ffmpeg/src/main/cpp/include/: decoder.hpp  dynamic_lib_loader.hpp  generator.hpp  jni_log.hpp  jni_util.hpp  player_controller.hpp  renderer.hpp  threadsafe_queue.hpp  traits.hpp  video_renderer.hpp
core/ffmpeg/src/main/cpp/include/asgl/: egl_manager.hpp  gl_free.hpp  gl_renderer.hpp  gl_utils.hpp
core/ffmpeg/src/main/cpp/include/audio/: audio_player.hpp
core/ffmpeg/src/main/cpp/include/ffmpeg/: ffmpeg_decoder.hpp  ffmpeg_free.hpp  ffmpeg_util.hpp
core/ffmpeg/src/main/cpp/src/: dynamic_lib_loader.cpp  ffmpeg_frame_utils.cpp  ffmpeg_free.hpp  ffmpeg_utils.cpp  player_controller.cpp  renderer.cpp  renderer_jni.cpp  traits.hpp
core/ffmpeg/src/main/cpp/src/asgl/: egl_manager.cpp  gl_renderer.cpp  gl_utils.cpp
core/ffmpeg/src/main/cpp/src/audio/: audio_player.cpp
core/ffmpeg/src/main/cpp/src/ffmpeg/: decoder.cpp  ffmpeg_decoder.cpp  ffmpeg_jni.cpp  ffmpeg_utils.cpp
core/ffmpeg/src/main/cpp/src/model/: task_runtime_info.cpp  task_runtime_info.hpp
core/ffmpeg/src/main/cpp/src/share/nlohmann/: json.hpp
core/http-cache/: build.gradle.kts
core/http-downloader/: build.gradle.kts
core/ktor-client/: build.gradle.kts
core/media/: build.gradle.kts
core/media-cache/: build.gradle.kts
core/model/: build.gradle.kts
core/navigation/: build.gradle.kts
core/network/: build.gradle.kts
core/testing/: build.gradle.kts
doc/: .gitignore  index.md  markdown-examples.md  package-lock.json  package.json
ecology/: README.md
gradle/: init.gradle.kts  libs.versions.toml
lint/: build.gradle.kts
logic/: build.gradle.kts
model_ffmpeg/: build.gradle  build.gradle.kts  proguard-rules.pro
tool_livestream/: build.gradle  gradle.properties
tool_log_export/: build.gradle  build.gradle.kts
tool_roam/: build.gradle  proguard-rules.pro
ui/: build.gradle.kts
ui-test-hilt-manifest/: build.gradle.kts
(+3215 files in other folders)
